<resources>
    <!--Developer & App info-->
    <string name="app_name" translatable="false">My Connection</string>
    <string name="developer" translatable="false">PH studio</string>
    <string name="app_version" translatable="false">1.5</string>

    <!--AboutFragment-->
    <string name="about" translatable="false">https://phstudio2.github.io/</string>
    <string name="github" translatable="false">https://github.com/phstudio2</string>
    <string name="report" translatable="false">https://github.com/phstudio2/MyConnection/issues/new/choose</string>
    <string name="google_play" translatable="false">https://play.google.com/store/apps/dev?id=5702159986992384861</string>
    <string name="privacy" translatable="false">https://phstudio2.webnode.com/privacy-policy3/</string>
    <string name="terms" translatable="false">https://phstudio2.webnode.com/terms-conditions3/</string>
    <string name="email_text2" translatable="false">https://play.google.com/store/apps/details?id=com.phstudio.myconnection</string>
    <string name="email_text3" translatable="false">https://galaxy.store/connection</string>
    <string name="text_telegram" translatable="false">Telegram</string>
    <string name="text_github" translatable="false">GitHub</string>
    <string name="telegram" translatable="false">https://t.me/s/phstudio2</string>

    <!--WifiFragment-->
    <string name="dbm" translatable="false"> dBm</string>
    <string name="five" translatable="false">/5</string>
    <string name="mbps" translatable="false"> Mbps</string>
    <string name="mhz" translatable="false"> MHz</string>
    <string name="ssid" translatable="false">SSID:</string>
    <string name="dns1" translatable="false">DNS1:</string>
    <string name="dns2" translatable="false">DNS2:</string>
    <string name="dhcp" translatable="false">DHCP:</string>
    <string name="vpn" translatable="false">VPN:</string>
    <string name="wifi" translatable="false">Wi-Fi</string>
    <string name="lease" translatable="false">Lease:</string>
    <string name="bssid" translatable="false">BSSID:</string>

    <!--Another-->
    <string name="cancel">Cancel</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Exit_app">Exit app</string>
    <string name="close_app">Do you want to close this application?</string>
    <string name="share_mail">Download this great app ;)!</string>
    <string name="email_text">Hi download My Connection from PH studio!</string>
    <string name="public_ip">Public IP:</string>
    <string name="connection_type">Connection type:</string>
    <string name="internal_ip">Internal IP:</string>
    <string name="gateway">Gateway:</string>
    <string name="not_internet">Network connection is not available</string>
    <string name="data">Mobile data</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="data_hours">1 hour</string>
    <string name="not_connected">Not Connected</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="medium">Medium</string>
    <string name="weak">Weak</string>
    <string name="none">None</string>
    <string name="hidden_ssid">Hidden SSID:</string>
    <string name="text_false">False</string>
    <string name="strength">Strength:</string>
    <string name="signal">Signal:</string>
    <string name="speed">Speed:</string>
    <string name="frequency">Frequency:</string>
    <string name="channel">Channel:</string>
    <string name="country">Country:</string>
    <string name="operator">Operator:</string>
    <string name="technology">Technology:</string>
    <string name="text_true">True</string>
    <string name="select_email">Select email</string>
    <string name="not_support">Your system does not support.</string>
    <string name="turn_position">Turn on the location and refresh the page</string>
    <string name="wifi_scanner">Wifi Scanner</string>
    <string name="enable_wifi">WiFi is disabled. We need to enable it</string>
    <string name="wait_for_scan">Wait for the scan to finish or turn on the position!</string>
    <string name="access">Access:</string>

    <!-- Dialog layout -->
    <string name="application_development">Application development</string>
    <string name="text_about">About</string>
    <string name="text_bug">Report bug</string>
    <string name="text_share">Share</string>
    <string name="text_apps">More apps</string>
    <string name="text_privacy">Privacy Policy</string>
    <string name="text_terms"><![CDATA[Terms & Conditions]]></string>

    <!-- Device layout -->
    <string name="device">Device</string>
    <string name="brand">Brand:</string>
    <string name="model">Model:</string>
    <string name="os_version">OS version:</string>
    <string name="mac">MAC address:</string>
    <string name="memory">Memory:</string>
    <string name="cpu" translatable="false">CPU:</string>
    <string name="hardware" translatable="false">RAM:</string>
    <string name="display" translatable="false">ID:</string>
    <string name="show_more">Show more information</string>
    <string name="battery">Battery:</string>
    <string name="website">Website</string>
</resources>