<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/ssid"
                app:srcCompat="@drawable/ic_name" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/ssid"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none"
                android:textColor="@color/text"
                android:textIsSelectable="true"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/frequency"
                app:srcCompat="@drawable/ic_frequency" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/frequency"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFrequency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mhz"
                android:textColor="@color/text"
                android:textIsSelectable="true"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/channel"
                app:srcCompat="@drawable/ic_channel" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/channel"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvChannel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none"
                android:textColor="@color/text"
                android:textIsSelectable="true"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/strength"
                app:srcCompat="@drawable/ic_strength" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/strength"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStrength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none"
                android:textColor="@color/text"
                android:textIsSelectable="true"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/bssid"
                app:srcCompat="@drawable/ic_bssid" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/bssid"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBssid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none"
                android:textColor="@color/text"
                android:textIsSelectable="true"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/access"
                app:srcCompat="@drawable/ic_access" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/access"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAccess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none"
                android:textColor="@color/text"
                android:textIsSelectable="true"
                android:textSize="18sp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:background="@color/orange" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>